# NaiveVO

./: CMakeLists.txt
include/: Camera.h  FrameHandler.h  FrameStructure.h  nvo_util.h
src/: Camera.cpp  FrameHandler.cpp  FrameStructure.cpp  main.cpp  nvo_util.cpp
