cmake_minimum_required(VERSION 3.6)
project(naiveVO)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/CmakeModules/)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/ SOURCE_FILES)
file(GLOB_RECURSE HEADS *.h *.hpp)

set(CMKAE_BUILD_TYPE RELEASE FILES ${HEADS})
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
source_group("Include" )
source_group("Src" FILES ${SOURCE_FILES})
add_executable(naiveVO ${SOURCE_FILES})
SET_TARGET_PROPERTIES(naiveVO PROPERTIES    RUNTIME_OUTPUT_DIRECTORY  "${PROJECT_SOURCE_DIR}/bin")

#find_package(Eigen3 REQUIRED)
#INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/include/)
find_package(OpenCV REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} ${PROJECT_SOURCE_DIR}/include/)
find_package(Sophus REQUIRED)
INCLUDE_DIRECTORIES(${Sophus_INCLUDE_DIRS})

target_link_libraries(naiveVO ${OpenCV_LIBS})


